--- a/accounts/pom.xml
+++ b/accounts/pom.xml
@@ -15,6 +15,7 @@
 	<description>Accounts Microserivce in Bank App MSA ecosystem</description>
 	<properties>
 		<java.version>1.8</java.version>
+		<spring-cloud.version>2020.0.4</spring-cloud.version>
 	</properties>
 	<dependencies>
 		<dependency>
