--- a/accounts/src/main/resources/application.properties
+++ b/accounts/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.defer-datasource-initialization=true
 
 # Port Configuration for Web Access
 server.port=8080
+spring.application.name=accounts
+spring.profiles.active=prod
+spring.config.import==optional:configserver:http://localhost:8071
